k8s/wc-deployment.yaml
# wc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wc-deployment
  namespace: web-component
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wc
  template:
    metadata:
      labels:
        app: wc
    spec:
      containers:
        - name: wc
          image: 127.0.0.1:7000/wc-wc:latest
          imagePullPolicy: Always # Add this line
          ports:
            - containerPort: 80

          volumeMounts:
            - name: dist
              mountPath: /usr/share/nginx/html/cdn/
            - name: demo
              mountPath: /usr/share/nginx/html/demo/
      volumes:
        - name: dist
          hostPath:
            path: <pwd-of-dist>
            type: DirectoryOrCreate
        - name: demo
          hostPath:
            path: <pwd-of-demo>
            type: DirectoryOrCreate
