k8s/wc-service.yaml
# wc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wc-service
  namespace: web-component
spec:
  type: NodePort
  selector:
    app: wc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
